added buffer and project information notebooks

--- a/01-ArcPy-in-a-notebook.ipynb
+++ b/01-ArcPy-in-a-notebook.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# We can use ArcPy in a Jupyter Notebook!?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Imports\n",
     "If this fails make sure you launched jupyter notebooks from the conda environment setup for use with ArcGIS Pro."
    ]
